--- a/views/fichas/indexFicha.ejs
+++ b/views/fichas/indexFicha.ejs
@@ -32,8 +32,7 @@
    <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
       <table id="cilindro" class="table-bordered" style="width: 100%;">
          <thead>
-            <tr>
-               <th>TOL &#177; 10%</th>
+            <tr id="headCilindro">
                <th colspan="4">CILINDRO</th>
                <th colspan="2">BICO</th>
             </tr>
@@ -48,9 +47,8 @@
 
       <table id="injecao" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headInjecao">
                <th colspan="6">INJEÇÃO</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="2">COMUTAÇÃO</th>
@@ -65,9 +63,8 @@
 
       <table id="recalque" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headRecalque">
                <th colspan="6">RECALQUE</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="2">bar / seg / %</th>
@@ -81,9 +78,8 @@
 
       <table id="dosagem" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headDosagem">
                <th colspan="6">DOSAGEM</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="2"></th>
@@ -98,9 +94,8 @@
 
       <table id="descompressao" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headDescompressao">
                <th colspan="6">DESCOMPRESSÃO</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="3">DESCOMPRIMIR</th>
@@ -115,9 +110,8 @@
 
       <table id="fechamento" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headFechamento">
                <th colspan="6">FECHAMENTO</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="2"></th>
@@ -134,9 +128,8 @@
 
       <table id="abertura" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headAbertura">
                <th colspan="6">ABERTURA</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="2"></th>
@@ -151,9 +144,8 @@
 
       <table id="extracao" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr id="headExtracao">
                <th colspan="6">EXTRAÇÃO</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th rowspan="2" colspan="1"></th>
@@ -175,9 +167,8 @@
 
       <table id="radial" class="table-bordered" style="width: 100%; margin-top: 30px">
          <thead>
-            <tr>
+            <tr  id="headRadial">
                <th colspan="6">RADIAL HIDRÁULICO</th>
-               <th colspan="1">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th rowspan="2" colspan="1"></th>
@@ -205,9 +196,8 @@
 
       <table id="camaraQuente" class="table-bordered" style="width: 100%; margin-top: 40px;">
          <thead>
-            <tr>
-               <th colspan="5">CÂMARA QUENTE</th>
-               <th colspan="2">TOL &#177; 10%</th>
+            <tr id="headCamara">
+               <th colspan="6">CÂMARA QUENTE</th>
             </tr>
          </thead>
          <tbody></tbody>
@@ -215,9 +205,8 @@
 
       <table id="valveGate" class="table-bordered" style="width: 100%; margin-top: 40px;">
          <thead>
-            <tr>
+            <tr id="headValve">
                <th colspan="5">VALVE GATES</th>
-               <th colspan="2">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="7">SEQUENCIADOR</th>
@@ -228,9 +217,8 @@
 
       <table id="refrigeracao" class="table-bordered" style="margin-top: 40px;">
          <thead>
-            <tr>
+            <tr id="headRefrigeracao">
                <th colspan="5">REFRIGERAÇÃO DO MOLDE</th>
-               <th colspan="2">TOL &#177; 10%</th>
             </tr>
          </thead>
          <tbody></tbody>
@@ -238,9 +226,8 @@
 
       <table id="vapor" class="table-bordered" style="margin-top: 40px;">
          <thead>
-            <tr>
+            <tr id="headVapor">
                <th colspan="5">STEAM(VAPOR)</th>
-               <th colspan="2">TOL &#177; 10%</th>
             </tr>
             <tr>
                <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
