--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -64,8 +64,13 @@
          <table class="table-bordered" style="width: 100%">
             <thead>
                <tr>
-                  <th>TOL &#177; 10%</th>
-                  <th colspan="4">CILINDRO</th>
+                  <th colspan="2">
+                     <select id="tolCilindro" name="tolCilindro" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
+                  <th colspan="3">CILINDRO</th>
                   <th colspan="2">BICO</th>
                </tr>
                <tr>
@@ -88,8 +93,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">INJEÇÃO</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">INJEÇÃO</th>
+                  <th colspan="2">
+                     <select id="tolInjecao" name="tolInjecao" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="2">COMUTAÇÃO</th>
@@ -147,8 +157,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">RECALQUE</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">RECALQUE</th>
+                  <th colspan="2">
+                     <select id="tolRecalque" name="tolRecalque" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="2">bar / seg / %</th>
@@ -188,8 +203,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">DOSAGEM</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">DOSAGEM</th>
+                  <th colspan="2">
+                     <select id="tolDosagem" name="tolDosagem" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="2"></th>
@@ -245,8 +265,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">DESCOMPRESSÃO</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">DESCOMPRESSÃO</th>
+                  <th colspan="2">
+                     <select id="tolDescompressao" name="tolDescompressao" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="3">DESCOMPRIMIR</th>
@@ -279,8 +304,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">FECHAMENTO</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">FECHAMENTO</th>
+                  <th colspan="2">
+                     <select id="tolFechamento" name="tolFechamento" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="2"></th>
@@ -352,8 +382,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">ABERTURA</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">ABERTURA</th>
+                  <th colspan="2">
+                     <select id="tolAbertura" name="tolAbertura" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="2"></th>
@@ -405,8 +440,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">EXTRAÇÃO</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">EXTRAÇÃO</th>
+                  <th colspan="2">
+                     <select id="tolExtracao" name="tolExtracao" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th rowspan="2" colspan="1"></th>
@@ -480,8 +520,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="6">RADIAL HIDRÁULICO</th>
-                  <th colspan="1">TOL &#177; 10%</th>
+                  <th colspan="5">RADIAL HIDRÁULICO</th>
+                  <th colspan="2">
+                     <select id="tolRadial" name="tolRadial" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th rowspan="2" colspan="1"></th>
@@ -584,7 +629,12 @@
             <thead>
                <tr>
                   <th colspan="5">CÂMARA QUENTE</th>
-                  <th colspan="2">TOL &#177; 10%</th>
+                  <th colspan="2">
+                     <select id="tolCamara" name="tolCamara" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
             </thead>
             <tbody>
@@ -607,8 +657,13 @@
          <table class="table-bordered" style="width: 100%; margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="5">VALVE GATES</th>
-                  <th colspan="2">TOL &#177; 10%</th>
+                  <th colspan="4">VALVE GATES</th>
+                  <th colspan="3">
+                     <select id="tolValve" name="tolValve" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="7">SEQUENCIADOR</th>
@@ -656,8 +711,13 @@
          <table class="table-bordered" style="margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="5">REFRIGERAÇÃO DO MOLDE</th>
-                  <th colspan="2">TOL &#177; 10%</th>
+                  <th colspan="4">REFRIGERAÇÃO DO MOLDE</th>
+                  <th colspan="3">
+                     <select id="tolRefrigeracao" name="tolRefrigeracao" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
             </thead>
             <tbody>
@@ -775,8 +835,13 @@
          <table class="table-bordered" style="margin-top: 40px;">
             <thead>
                <tr>
-                  <th colspan="5">STEAM(VAPOR)</th>
-                  <th colspan="2">TOL &#177; 10%</th>
+                  <th colspan="4">STEAM(VAPOR)</th>
+                  <th colspan="3">
+                     <select id="tolVapor" name="tolVapor" class="form-control">
+                        <option value="0.1">TOL &#177; 10%</option>
+                        <option value="0.05">TOL &#177; 5%</option>
+                     </select>
+                  </th>
                </tr>
                <tr>
                   <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
