radial hidraulico campo type alterado para um tipo select

--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -752,19 +752,29 @@
                         <tbody>
                            <tr>
                               <th colspan="1">TYPE</th>
-                              <th colspan="1">TEMPO</th>
-                              <th colspan="1">LIMITE</th>
+                              <th colspan="1">
+                                 <select id="typeEntrada1" name="typeEntrada1" class="form-control">
+                                    <option value="Tempo">TEMPO</option>
+                                    <option value="Limite">LIMITE</option>
+                                 </select>
+                              </th>
+                              <th colspan="1">
+                                 <select id="typeSaida1" name="typeSaida1" class="form-control">
+                                    <option value="Limite">LIMITE</option>
+                                    <option value="Tempo">TEMPO</option>
+                                 </select>
+                              </th>
                               <td colspan="1">
-                                 <input style="width: 100%" id="type1" name="type1" value="<%= injetor.radialTypeEntrada1 %>">
+                                 <input style="width: 100%" id="type1" name="type1" value="<%= injetor.radialTypeEntrada2 %>">
                               </td>
                               <td colspan="1">
-                                 <input style="width: 100%" id="type2" name="type2" value="<%= injetor.radialTypeSaida1 %>">
+                                 <input style="width: 100%" id="type2" name="type2" value="<%= injetor.radialTypeSaida2 %>">
                               </td>
                               <td colspan="1">
-                                 <input style="width: 100%" id="type3" name="type3" value="<%= injetor.radialTypeEntrada2 %>">
+                                 <input style="width: 100%" id="type3" name="type3" value="<%= injetor.radialTypeEntrada3 %>">
                               </td>
                               <td colspan="1">
-                                 <input style="width: 100%" id="type4" name="type4" value="<%= injetor.radialTypeSaida2 %>">
+                                 <input style="width: 100%" id="type4" name="type4" value="<%= injetor.radialTypeSaida3 %>">
                               </td>
                            </tr>
                            <tr>
