--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -740,19 +740,19 @@
                   <tbody>
                      <tr>
                         <th colspan="1">TYPE</th>
-                        <th colspan="1">TEMPO</th>
-                        <th colspan="1">LIMITE</th>
+                        <th colspan="1"><%= injetor.radialTypeEntrada1 %></th>
+                        <th colspan="1"><%= injetor.radialTypeSaida1 %></th>
                         <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type1" name="type1" value="<%= injetor.radialTypeEntrada1 %>">
+                           <input class="read-only" readonly style="width: 100%" id="type1" name="type1" value="<%= injetor.radialTypeEntrada2 %>">
                         </td>
                         <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type2" name="type2" value="<%= injetor.radialTypeSaida1 %>">
+                           <input class="read-only" readonly style="width: 100%" id="type2" name="type2" value="<%= injetor.radialTypeSaida2 %>">
                         </td>
                         <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type3" name="type3" value="<%= injetor.radialTypeEntrada2 %>">
+                           <input class="read-only" readonly style="width: 100%" id="type3" name="type3" value="<%= injetor.radialTypeEntrada3 %>">
                         </td>
                         <td colspan="1">
-                           <input class="read-only" readonly style="width: 100%" id="type4" name="type4" value="<%= injetor.radialTypeSaida2 %>">
+                           <input class="read-only" readonly style="width: 100%" id="type4" name="type4" value="<%= injetor.radialTypeSaida3 %>">
                         </td>
                      </tr>
                      <tr>
