--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -967,6 +967,8 @@
    <button class="btn btn-primary">Cadastrar</button>
 </form>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/FichaTecnica.js></script>
 <script>
    function validateForm() {
       var molde = document.forms["pamForm"]["molde"].value;
