--- a/views/maquinas/index.ejs
+++ b/views/maquinas/index.ejs
@@ -13,6 +13,7 @@
             <tr>
                 <th> ID </th>
                 <th> Descrição </th>
+                <th> Número da Máquina </th>
                 <th> IP </th>
                 <th> Código Injet </th>
                 <th> Peso </th>
@@ -25,6 +26,7 @@
             <tr>
                 <td> <%= article.id %> </td>
                 <td> <%=article.descricao %>  </td>
+                <td> <%= article.numeroMaquina %> </td>
                 <td> <%=article.mac %>  </td>
                 <td> <%=article.codigo %>  </td>
                 <td> <%=article.peso %> </td>
