--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -70,6 +70,12 @@
                   </table>
                </div>
 
+               <div class="form-floating" style="margin-bottom: 50px;">
+                  <small>Usuário: <%= userLogado %></small><br>
+                  <label for="floatingTextarea">Motivo da alteração:</label>
+                  <textarea class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
+               </div>
+
                <div class="d-flex justify-content-between">
                   <!-- INJETORES -->
                   <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
@@ -1990,12 +1996,18 @@
    function validateForm() {
       var molde = document.forms["pamForm"]["molde"].value;
       var material = document.forms["pamForm"]["material"].value;
+      var justificativa = document.forms["pamForm"]["justificativa"].value;
+
       if (molde === "") {
          alert("O número do Molde deve ser informado.");
          return false;
       }
       if (material === "") {
          alert("O número do Material deve ser informado.");
+         return false;
+      }
+      if (justificativa === "") {
+         alert("A justificativa deve ser informada.");
          return false;
       }
    }
