--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -67,6 +67,12 @@
             </table>
          </div>
 
+         <div class="form-floating" style="margin-bottom: 50px;">
+            <small>Usuário: <%= injetor.Usuario %></small><br>
+            <label for="floatingTextarea">Motivo da alteração:</label>
+            <textarea style="background-color: #fff;" readonly class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
+         </div>
+
          <div class="d-flex justify-content-between">
             <!-- INJETORES -->
             <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
