--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -26,7 +26,7 @@
         <img class="mb-4" src="/images/ficha.jpg">
         <h1 class="h3 mb-3 font-weight-normal">Faça o Login para Acessar</h1>
         <label for="inputEmail" class="sr-only">Login</label>
-        <input name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+        <input name="email" id="inputEmail" class="form-control" placeholder="Nome" required autofocus>
         <label for="inputPassword" class="sr-only">Senha</label>
         <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Senha" required>
         <div class="checkbox mb-3">
