novo sidebar para acesso pelo vf-web

--- a/views/acesso_vf_web/index.ejs
+++ b/views/acesso_vf_web/index.ejs
@@ -1,5 +1,5 @@
 <%- include ('../partials/header.ejs') %>
-<%- include ('../partials/sidebar.ejs') %>
+<%- include ('./sidebar.ejs') %>
 
 <div class="container-fluid"> 
    
