--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -70,7 +70,7 @@
          <div class="form-floating" style="margin-bottom: 50px;">
             <small>Usuário: <%= injetor.Usuario %></small><br>
             <label for="floatingTextarea">Motivo da alteração:</label>
-            <textarea style="background-color: #fff;" readonly class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
+            <textarea style="background-color: #fff;" readonly class="form-control" id="justificativa" name="justificativa"></textarea>
          </div>
 
          <div class="d-flex justify-content-between">
