--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -71,8 +71,9 @@
                </div>
 
                <div class="form-floating" style="margin-bottom: 50px;">
-                  <small>Usuário: <%= userLogado %></small><br>
-                  <label for="floatingTextarea">Motivo da alteração:</label>
+                  <small>Usuário: 
+                  <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br>
+                  <label for="justificativa">Motivo da alteração:</label>
                   <textarea class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
                </div>
 
