--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -112,6 +112,7 @@
 <script src=/scripts/jquery.js></script>
 <!-- <script src=/scripts/FichaScripts.js></script> -->
 <!-- <script src=/scripts/FichaScripts2.js></script> -->
+<script src=/scripts/documentScripts.js></script>
 <script src=/scripts/paramsScriptPam.js></script>
 
 <%- include ('../partials/footer.ejs') %>   
