--- a/views/fichas/newFichaToshiba.ejs
+++ b/views/fichas/newFichaToshiba.ejs
@@ -132,4 +132,4 @@
 </form>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src=/scripts/FichaTecnica.js></script>
+<!-- <script src=/scripts/FichaTecnica.js></script> -->
