adicionado botao de comparação e edição na revisao das fichas

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -5,7 +5,7 @@
 
     <ul class="navbar-nav mr-auto">
         <li class="navbar-item">
-            <a class="nav-link <%=nav_ficha%>" href="/fichas" >Fichas Técnicas</a>
+            <a class="nav-link <%=nav_ficha%>" href="/fichas" >Parâmetros Reais</a>
         </li>
         <!-- <li class="navbar-item">
             <a class="nav-link <%=nav_parametros%>" href="/parametrosReal">Parâmetros</a>
