--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -8,20 +8,30 @@
    <div>
       <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
       <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
+      <button class="btn btn-warning" onclick="showSelect()">Comparar Valores</button>
    </div>
    <hr>   
    
-   <h5>Selecione uma máquina: </h5>
-   <input type="hidden" name="dsMaquina"  id="dsMaquina" value="<%= dsMaquina %>">
-
-   <select name="maquinas" id="maquinas"  class="form-control">
-      <option value="0"> Selecione uma máquina</option>
-      <% maquinas.forEach((maquina) => { %>
-         <option value="<%= maquina.id %>"> <%= maquina.descricao %></option>
-      <% }) %>
-   </select>
+   <div id="selectMaquina">
+      <h5>Selecione uma máquina: </h5>
+      <input type="hidden" name="dsMaquina"  id="dsMaquina" value="<%= dsMaquina %>">
+   
+      <select name="maquinas" id="maquinas"  class="form-control">
+         <option value="0"> Selecione uma máquina</option>
+         <% maquinas.forEach((maquina) => { %>
+            <option value="<%= maquina.id %>"> <%= maquina.descricao %></option>
+         <% }) %>
+      </select>
+   </div>
+   
 
    <br>
+   <!-- <div id="setDate">
+      <label style="font-weight: 600;" for="data">Informar data específica para buscar os dados da coleta:</label>
+      <input type="date" id="data">
+      <button class="btn btn-primary">Enviar</button>
+   </div> -->
+   
    <div id="nav"></div>
    <br>
 
@@ -53,7 +63,7 @@
       </tbody>
    </table> -->
     
-   <h5>Parâmetros De Programa: </h5>
+   <!-- <h5>Parâmetros De Programa: </h5> -->
    <br>
    <table class="table table-bordered" id="parametros"> 
       <thead>
