--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -6,6 +6,8 @@
    <h2>Revisões</h2> 
    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
    <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
+   <button id="comparaButton" class="btn btn-warning" onclick="comparar()">Comparar Valores</button>
+   <button id="editButton" class="btn btn-warning" onclick="editarRevisao()">Editar</button>
    <hr>
 
    <form method="GET" action="/ficha/lista" style="display: inline;">
@@ -20,8 +22,9 @@
       <div class="card-header">                
          <h2>Revisão Id <%= injetor.revisao %></h2>              
       </div>
-      <div class="card-body">
-      
+      <div class="card-body" id="visualização">
+         <input type="hidden" class="read-only" readonly style="width: 100%" id="maquina" name="maquina" value="<%= injetor.maq %>">
+
          <div class="table-ficha">
             <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
                <thead>
@@ -1921,11 +1924,262 @@
             <!-- FIM PERIFÉRICOS -->
          </div>
       </div>
+
+      <!-- COMPARACAO PARAMETROS -->
+      <div id="parametrosRevisao">
+         <div class="d-flex flex-column ficha">
+            <div class="d-flex flex-row">
+               <div style="width: 10px; height: 10px; background-color: blue; margin-right: 5px;"></div>Valores cadastrados
+            </div>
+            <div class="d-flex flex-row">
+               <div style="width: 10px; height: 10px; background-color: green; margin-right: 5px;"></div>Valores reais
+            </div>
+         </div>
+         <br>
+         
+         <div class="table-responsive">
+            <table id="headerFicha" class="table-bordered ficha" style="width: 100%; margin-bottom: 40px;">
+               <thead>
+                  <tr>
+                     <th>Número do Molde:</th>
+                     <th>Número da Máquina:</th>
+                     <th>Cliente:</th>
+                     <th>Código PAM:</th>
+                     <th>Técnico:</th>
+                     <th>Produto:</th>
+                     <th>Material:</th>
+                     <th>Revisão:</th>
+                  </tr>
+               </thead>
+               <tbody></tbody>
+            </table>
+         </div>
+         
+         
+         <div class="d-flex justify-content-between">
+            <!-- INJETORES -->
+            <div class="d-flex flex-column table-responsive table-ficha justify-content-between" style="width: 50vw; margin-right: 20px;">
+               <table id="cilindro" class="table-bordered" style="width: 100%;">
+                  <thead>
+                     <tr id="headCilindro">
+                        <th colspan="4">CILINDRO</th>
+                        <th colspan="2">BICO</th>
+                     </tr>
+                     <tr>
+                        <% for(var i = 0; i < 7; i++) { %>
+                           <th><%= i+1 %></th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+         
+               <table id="injecao" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headInjecao">
+                        <th colspan="6">INJEÇÃO</th>
+                     </tr>
+                     <tr>
+                        <th colspan="2">COMUTAÇÃO</th>
+                        <% for(var i = 5; i >= 1; i--) { %>
+                           <th colspan="1">INJ. <%= i %></th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+                  <tfoot id="injecaoFoot"></tfoot>
+               </table>
+         
+               <table id="recalque" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headRecalque">
+                        <th colspan="6">RECALQUE</th>
+                     </tr>
+                     <tr>
+                        <th colspan="2">bar / seg / %</th>
+                        <% for(var i = 5; i >= 1; i--) { %>
+                           <th colspan="1">MANT. <%= i %></th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+         
+               <table id="dosagem" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headDosagem">
+                        <th colspan="6">DOSAGEM</th>
+                     </tr>
+                     <tr>
+                        <th colspan="2"></th>
+                        <% for(var i = 5; i >= 1; i--) { %>
+                           <th colspan="1">CARGA. <%= i %></th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+                  <tfoot id="dosagemFoot"></tfoot>
+               </table>
+         
+               <table id="descompressao" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headDescompressao">
+                        <th colspan="6">DESCOMPRESSÃO</th>
+                     </tr>
+                     <tr>
+                        <th colspan="3">DESCOMPRIMIR</th>
+                        <th colspan="1">POSIÇÃO</th>
+                        <th colspan="1">PRESSÃO</th>
+                        <th colspan="1">FLUXO</th>
+                        <th colspan="1">TEMPO</th>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+         
+               <table id="fechamento" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headFechamento">
+                        <th colspan="6">FECHAMENTO</th>
+                     </tr>
+                     <tr>
+                        <th colspan="2"></th>
+                        <% for(var i = 1; i <= 3; i++) { %>
+                           <th colspan="1">FECHA. <%= i %></th>
+                        <% } %>
+                        <th colspan="1">PROT.M</th>
+                        <th colspan="1">ALTA PRESSÃO</th>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+                  <tfoot id="fechamentoFoot"></tfoot>
+               </table>
+         
+               <table id="abertura" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headAbertura">
+                        <th colspan="6">ABERTURA</th>
+                     </tr>
+                     <tr>
+                        <th colspan="2"></th>
+                        <% for(var i = 5; i >= 1; i--) { %>
+                           <th colspan="1">ABRIR. <%= i %></th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+                  <tfoot id="aberturaFoot"></tfoot>
+               </table>
+         
+               <table id="extracao" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr id="headExtracao">
+                        <th colspan="6">EXTRAÇÃO</th>
+                     </tr>
+                     <tr>
+                        <th rowspan="2" colspan="1"></th>
+                        <th colspan="3">AVANÇO</th>
+                        <th colspan="3">RECUO</th>
+                     </tr>
+                     <tr>
+                        <% for(var i = 1; i <= 3; i++) { %>
+                           <th colspan="1">EXTRAIR. <%= i %></th>
+                        <% } %>
+                        <% for(var i = 3; i >= 1; i--) { %>
+                           <th colspan="1">EXTRAIR. <%= i %></th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+                  <tfoot id="extracaoFoot"></tfoot>
+               </table>
+         
+               <table id="radial" class="table-bordered" style="width: 100%; margin-top: 30px">
+                  <thead>
+                     <tr  id="headRadial">
+                        <th colspan="6">RADIAL HIDRÁULICO</th>
+                     </tr>
+                     <tr>
+                        <th rowspan="2" colspan="1"></th>
+                        <% for(var i = 1; i <= 3; i++) { %>
+                           <th colspan="2">RADIAL</th>
+                        <% } %>
+                     </tr>
+                     <tr>
+                        <% for(var i = 1; i <= 3; i++) { %>
+                           <th colspan="1">ENTRADA</th>
+                           <th colspan="1">SAÍDA</th>
+                        <% } %>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+            </div>
+            <!-- FIM INJETORES -->
+         
+            <!-- PERIFÉRICOS -->
+            <div class="table-responsive table-ficha d-flex flex-column justify-content-between" style="width: 50vw;">
+               <table id="termopar" class="table-bordered" style="width: 100%">
+                  <tbody></tbody>
+               </table>
+         
+               <table id="camaraQuente" class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <thead>
+                     <tr id="headCamara">
+                        <th colspan="6">CÂMARA QUENTE</th>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+         
+               <table id="valveGate" class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <thead>
+                     <tr id="headValve">
+                        <th colspan="5">VALVE GATES</th>
+                     </tr>
+                     <tr>
+                        <th colspan="7">SEQUENCIADOR</th>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+         
+               <table id="refrigeracao" class="table-bordered" style="margin-top: 40px;">
+                  <thead>
+                     <tr id="headRefrigeracao">
+                        <th colspan="5">REFRIGERAÇÃO DO MOLDE</th>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+         
+               <table id="vapor" class="table-bordered" style="margin-top: 40px;">
+                  <thead>
+                     <tr id="headVapor">
+                        <th colspan="5">STEAM(VAPOR)</th>
+                     </tr>
+                     <tr>
+                        <th colspan="7">REFRIGERAÇÃO DO MOLDE</th>
+                     </tr>
+                  </thead>
+                  <tbody></tbody>
+               </table>
+            </div>
+            <!-- FIM PERIFÉRICOS -->
+         </div>
+      </div>
+   </div>
+   <!-- FIM COMPARACAO -->
+
+   <div id="editRevisao">
+      <%- include ('./editRevisao.ejs') %>
    </div>
    <br>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src=/scripts/documentScripts.js></script>
+<script src=/scripts/FichaTecnica.js></script>
+<script src=/scripts/revisaoComparaParametros.js></script>
 
 <%- include ('../partials/footer.ejs') %>
