--- a/views/revisao/editRevisao.ejs
+++ b/views/revisao/editRevisao.ejs
@@ -39,7 +39,7 @@
                   <input style="width: 100%" id="codigoPAM" name="codigoPAM" value="<%= injetor.CodigoPAM %>">
                </td>
                <td>
-                  <input style="width: 100%" id="tecnico" name="tecnico" value="<%= injetor.Tecnico %>">
+                  <input class="read-only" readonly style="width: 100%" id="tecnicoEdit" name="tecnico" value="<%= injetor.Tecnico %>">
                </td>
                <td>
                   <input style="width: 100%" id="produto" name="produto" value="<%= injetor.Produto %>">
@@ -58,8 +58,8 @@
    </div>
 
    <div class="form-floating" style="margin-bottom: 50px;">
-      <small>Usuário: 
-      <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br>
+      <!-- <small>Usuário: 
+      <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br> -->
       <label for="justificativa">Motivo da alteração:</label>
       <textarea class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
    </div>
