--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -7,7 +7,7 @@
    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
    <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
    <button id="comparaButton" class="btn btn-warning" onclick="comparar()">Comparar Valores</button>
-   <button id="editButton" class="btn btn-warning" onclick="editarRevisao()">Editar</button>
+   <button id="editButton" class="btn btn-warning" data-toggle='modal' data-target='#loginModal'>Editar</button>
    <hr>
 
    <form method="GET" action="/ficha/lista" style="display: inline;">
@@ -71,7 +71,7 @@
          </div>
 
          <div class="form-floating" style="margin-bottom: 50px;">
-            <small>Usuário: <%= injetor.Usuario %></small><br>
+            <small id="ultimaEdicao">Última edição feita por: <%= injetor.Usuario %></small><br>
             <label for="floatingTextarea">Motivo da alteração:</label>
             <textarea style="background-color: #fff;" readonly class="form-control" id="justificativa" name="justificativa"></textarea>
          </div>
@@ -2175,6 +2175,24 @@
       <%- include ('./editRevisao.ejs') %>
    </div>
    <br>
+
+   <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <div class="modal-body">
+               <h4>Confirmar usuário:</h4><br>
+               <label for="email">Nome:</label>
+               <input type="text" id="email" name="email" value=""><br>
+               <label for="password">Senha:</label>
+               <input type="password" id="password" name="password" value="">
+            </div>
+            <div class="modal-footer">
+               <button onclick="form_submit()" type="button" class="btn btn-primary">Confirmar</button>
+               <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
