--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -52,7 +52,7 @@
                               <input style="width: 100%" id="codigoPAM" name="codigoPAM" value="<%= injetor.CodigoPAM %>">
                            </td>
                            <td>
-                              <input style="width: 100%" id="tecnico" name="tecnico" value="<%= injetor.Tecnico %>">
+                              <input class="read-only" readonly style="width: 100%" id="tecnico" name="tecnico" value="<%= injetor.Tecnico %>">
                            </td>
                            <td>
                               <input style="width: 100%" id="produto" name="produto" value="<%= injetor.Produto %>">
@@ -71,8 +71,8 @@
                </div>
 
                <div class="form-floating" style="margin-bottom: 50px;">
-                  <small>Usuário: 
-                  <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br>
+                  <!-- <small>Usuário: 
+                  <input style="border: none; font-weight: 600;" readonly style="width: 100%" id="userLogado" name="userLogado"></small><br> -->
                   <label for="justificativa">Motivo da alteração:</label>
                   <textarea class="form-control" placeholder="Justifique a alteração" id="justificativa" name="justificativa"></textarea>
                </div>
@@ -2132,6 +2132,30 @@
             </form>
          </div>
    </div>
+
+   <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModal" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <form autocomplete="off">
+               <div class="modal-body">
+                  <input type="email" name="email" id="email_fake" class="hidden" autocomplete="off" style="display: none;" />
+                  <input type="password" name="password" id="password_fake" class="hidden" autocomplete="off" style="display: none;" />
+
+                  <h4>Confirmar usuário:</h4><br>
+                  <label for="email">Nome:</label>
+                  <input type="text" id="email" name="email" autocomplete="off"><br>
+                  <label for="password">Senha:</label>
+                  <input type="password" id="password" name="password" autocomplete="off">
+               </div>
+               <div class="modal-footer">
+                  <button onclick="form_submit()" type="button" class="btn btn-primary">Confirmar</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+               </div>
+            </form>
+         </div>
+      </div>
+   </div>
+
    <br>
 </div>
 
