--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -2180,7 +2180,7 @@
       <div class="modal-dialog">
          <div class="modal-content">
             <div class="modal-body">
-               <h4>Confirmar usuário:</h4><br>
+               <h4 id="titulo">Confirmar usuário:</h4><br>
                <label for="email">Nome:</label>
                <input type="text" id="email" name="email" value=""><br>
                <label for="password">Senha:</label>
@@ -2197,7 +2197,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src=/scripts/documentScripts.js></script>
-<script src=/scripts/FichaTecnica.js></script>
+<!-- <script src=/scripts/FichaTecnica.js></script> -->
 <script src=/scripts/revisaoComparaParametros.js></script>
 
 <%- include ('../partials/footer.ejs') %>
